# AI-Ready-Workspace-Aggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/api/v1/: connectors.py  messages.py  router.py  search.py
app/connectors/: __init__.py  base.py  email.py  github.py  telegram.py
app/core/: celery_app.py  config.py  logging.py
app/db/: base.py  models.py  session.py
app/schemas/: message.py
app/services/: cursor.py  ingest.py  storage.py
app/tasks/: attachments.py  embeddings.py  sync.py
app/vector/: __init__.py  embeddings.py  qdrant.py
tests/: conftest.py  test_api.py  test_dedup.py  test_email.py  test_errors.py  test_github.py  test_telegram.py  test_vector.py
