[project]
name = "workspace-aggregator"
version = "0.1.0"
description = "AI-ready aggregator of corporate communications and tasks for AI agents"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on these calls in argument
# defaults, so B008 does not apply to them.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
